--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     height: 200px;
     background: #aaa;
   }
+  body {
+    font-size: 20px;
+  }
   </style>
 </head>
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="jumbotron text-center" style="margin-bottom:0; background-color:red">
   <h1>ABT Sportsline</h1>
-  <p>Von der Rennstrecke auf die Straße</p> 
+  <p>Von der Rennstrecke auf die Straße</p>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -37,54 +40,59 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://www.abt-sportsline.de/unternehmen/">Unternehmen</a>
-      </li>    
+      </li>
     </ul>
-  </div>  
+  </div>
 </nav>
 
 <div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-4">
-      <h2>Tuning</h2>
-      <h5>Audi Tuning:</h5>
-      <div img src:"https://www.abt-sportsline.de/fileadmin/user_upload/ABT-Tuning_RS6-R_schwarz-schraeg_hinten.JPG">Audi RS-6</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
+
+      <h3>Mehr Links</h3>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link active" href=""></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="https://www.abt-sportsline.de/special-editions/abt-rs6-r/">Audi RS6-R</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="https://www.abt-sportsline.de/vw-tuning/golf/#67723568!AA9A8E7">VW Golf VIII</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" href="https://www.abt-sportsline.de/skoda-tuning/octavia/#67723582!B77AA42">Skoda Octavia RS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.abt-sportsline.de/seat-tuning/ibiza/#67723634!26E17B4">Seat Ibiza</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.abt-sportsline.de/cupra-tuning/formentor/#67723736!2137876">Cupra Formentor</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.abt-sportsline.de/lamborghini-tuning/urus/">Lamborghini Urus</a>
         </li>
       </ul>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
+      <h2>Audi RS7-R</h2>
       <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p><img alt="Audi RS7-R" src="https://cdn.motor1.com/images/mgl/7MK27/s1/abt-audi-rs7-r.jpg" width="550">Abt Audi RS7-R</p>
+      <p>Information</p>
+      <p>69.900 Euro kostet das RS7-R Paket. Das Auto selber ist noch nicht mit einbezogen. Das Performance-Upgrade für den V8-Biturbo ist das Herzstück des Umbaus. Die Basisversion mit 600Ps und 800Nm wird somit ein ganzes Stück übertroffen. Der RS7-R hat nun eine Leistung von 740PS und 920Nm. Von 0 auf 100 kommt das Auto in nur 3,2 Sekunden. </p>
       <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <h2>Daniel Abt</h2>
+      <p>Daniel Abt ist ein bis 2020 aktiv gewesener deutscher Automobilrennfahrer und Influencer. Er ist Sohn des Rennstallbesitzers Hans-Jürgern Abt. Er trat 2013 und 2014 in der GP2-Serie an. Von 2014 bis 2020 trat er in der FIA-Formel-E-Meisterschaft an.</p>
+      <p><img alt="Daniel Abt" src="https://p6.focus.de/img/fotos/id_12263442/daniel-abt.jpg?im=Crop%3D%280%2C80%2C4256%2C2408%29%3BResize%3D%281200%29&hash=f8a6522650f6782a536b9af7d685c303ca1927bd560e94fe6fbeea3437c0b52e" width="550">Daniel Abt</p>
+      <p></p>
+      <p></p>
     </div>
   </div>
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+  <p>Johannes FB</p>
 </div>
 
 </body>
