--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="https://www.abt-sportsline.de/tuning/">Tuning</a>
+        <a class="nav-link" href="DTM.html">DTM</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.abt-sportsline.de/motorsport/">Motorsport</a>
+        <a class="nav-link" href="">FIA Formula E</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.abt-sportsline.de/unternehmen/">Unternehmen</a>
+        <a class="nav-link" href="">Extreme E</a>
       </li>
     </ul>
   </div>
@@ -76,13 +76,11 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>Audi RS7-R</h2>
       <h5>Title description, Dec 7, 2017</h5>
       <p><img alt="Audi RS7-R" src="https://cdn.motor1.com/images/mgl/7MK27/s1/abt-audi-rs7-r.jpg" width="550">Abt Audi RS7-R</p>
       <p>Information</p>
       <p>69.900 Euro kostet das RS7-R Paket. Das Auto selber ist noch nicht mit einbezogen. Das Performance-Upgrade für den V8-Biturbo ist das Herzstück des Umbaus. Die Basisversion mit 600Ps und 800Nm wird somit ein ganzes Stück übertroffen. Der RS7-R hat nun eine Leistung von 740PS und 920Nm. Von 0 auf 100 kommt das Auto in nur 3,2 Sekunden. </p>
       <br>
-      <h2>Daniel Abt</h2>
       <p>Daniel Abt ist ein bis 2020 aktiv gewesener deutscher Automobilrennfahrer und Influencer. Er ist Sohn des Rennstallbesitzers Hans-Jürgern Abt. Er trat 2013 und 2014 in der GP2-Serie an. Von 2014 bis 2020 trat er in der FIA-Formel-E-Meisterschaft an.</p>
       <p><img alt="Daniel Abt" src="https://p6.focus.de/img/fotos/id_12263442/daniel-abt.jpg?im=Crop%3D%280%2C80%2C4256%2C2408%29%3BResize%3D%281200%29&hash=f8a6522650f6782a536b9af7d685c303ca1927bd560e94fe6fbeea3437c0b52e" width="550">Daniel Abt</p>
       <p></p>
