--- a/DTM.html
+++ b/DTM.html
@@ -15,22 +15,30 @@
   <h1>DTM</h1>
   <p>Deutsches Tourenwagen Masters</p>
 </div>
-
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">Informationen</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.dtm.com/de">Offizielle Website</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://de.wikipedia.org/wiki/DTM">Wikipedia Beitrag</a>
+    </ul>
+  </div>
+</nav>
 <div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-12">
 
-      <h3>Links</h3>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Aktive Seite</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.dtm.com/de">Offizielle Seite der DTM</a>
-        </li>
-        <p></p>
-        <h2>Neustart der DTM</h2>
-        <p><img src="https://www.abt-sportsline.de/fileadmin/user_upload/DTM_2021_ABT-Fahrzeuge_alle.jpg" width="700"></p>
+
+      <ul class="nav nav-pills flex-column">  
+      </ul>
+        <h2> Neustart der DTM </h2>
+        <p><img alt="Neustart der DTM" src="https://www.abt-sportsline.de/fileadmin/user_upload/DTM_2021_ABT-Fahrzeuge_alle.jpg" width="700"></p>
         <h4>Allgemeines</h4>
         <p>Neue Autos, neue Fahrer, neue Regeln.</p>
 
@@ -41,16 +49,13 @@
 <p>Neu sind in dieser Saison auch die Autos – der Audi RS5 DTM wird abgelöst vom Audi R8 LMS. Damit kommt ein Spitzenprodukt der GT3-Kategorie für uns zum Einsatz.</p>
 
 <p>Weitere Reglementsänderungen versprechen noch mehr Spannung. So sind beim Boxenstopp nur noch 6 anstelle von 9 Mechanikern erlaubt. Zum ersten Mal in der Geschichte der DTM wird am Ende der Rennsaison neben Fahrer, Team und Hersteller Champion auch ein Junior Champion gekürt. Der beste Junior der jeweiligen Klassen des Jahrgangs 1999 oder jünger erhält am Ende der Saison diesen Titel.</p>
-        <li class="nav-item">
-          <p><img src="https://www.abt-sportsline.de/fileadmin/_processed_/3/7/csm_ABT_Motorsport_DTM_Pokale_2020_29f96f82d2.jpg" alt="jakob" width="700"></a>
+          <p><img src="https://www.abt-sportsline.de/fileadmin/_processed_/3/7/csm_ABT_Motorsport_DTM_Pokale_2020_29f96f82d2.jpg" alt="jakob" width="700"></p>
       </div>
-      </ul>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-0">
     </div>
   </div>
-</div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Johannes FB</p>
