--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <a class="nav-link" href="DTM.html">DTM</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">FIA Formula E</a>
+        <a class="nav-link" href="FIAFormulaE.html">FIA Formula E</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Extreme E</a>
+        <a class="nav-link" href="ExtremeE.html.html">Extreme E</a>
       </li>
     </ul>
   </div>
